# Cloud-ToDo-API-Web-Client

./: README.md
cloud-todo-mvp/: ARCHITECTURE.md  Makefile  README.md  docker-compose.yml  openapi.json  postman_collection.json
cloud-todo-mvp/backend/: Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements.txt
cloud-todo-mvp/backend/alembic/: env.py
cloud-todo-mvp/backend/alembic/versions/: 0001_create_tasks.py
cloud-todo-mvp/backend/app/: main.py
cloud-todo-mvp/backend/app/api/: deps.py
cloud-todo-mvp/backend/app/api/routes/: tasks.py
cloud-todo-mvp/backend/app/core/: config.py  errors.py  logging.py  security.py
cloud-todo-mvp/backend/app/domain/: entities.py
cloud-todo-mvp/backend/app/middleware/: request_id.py
cloud-todo-mvp/backend/app/models/: __init__.py  task.py
cloud-todo-mvp/backend/app/repositories/: task_repository.py
cloud-todo-mvp/backend/app/schemas/: task.py
cloud-todo-mvp/backend/app/services/: task_service.py
cloud-todo-mvp/backend/tests/: conftest.py
cloud-todo-mvp/backend/tests/integration/: test_tasks_api.py
cloud-todo-mvp/backend/tests/unit/: test_task_service.py
cloud-todo-mvp/frontend/: app.js  index.html  styles.css
cloud-todo-mvp/infra/: apprunner-service.example.yaml  s3-cloudfront-frontend.example.yaml
