[project]
name = "cloud-todo-api"
version = "0.1.0"
description = "Cloud ToDo API MVP for AWS App Runner"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "pydantic==2.10.4",
    "uvicorn[standard]==0.34.0",
    "SQLAlchemy==2.0.36",
    "psycopg[binary]==3.2.3",
    "alembic==1.14.0",
    "pydantic-settings==2.7.1",
    "python-json-logger==3.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "httpx==0.28.1",
    "ruff==0.8.6",
]

[tool.ruff]
line-length = 110
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ARG"]
ignore = ["B008"]

[tool.pytest.ini_options]
addopts = "-q -p no:asyncio"
testpaths = ["tests"]
pythonpath = ["."]
